--- a/style.css
+++ b/style.css
@@ -1,11 +1,31 @@
-#header {
-    background: url("service.jpg") center center / cover no-repeat ;
+/*#header {
+    background: url("service.jpg") center center / cover no-repeat  ;
+ 
    
+    
   }
+
+  */
+
+  .container3 {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+
+  .centered2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+
   
   .text {
+    font-family: poppins;
     white-space: pre;
-   font-size: 28px;
+  font-size: 60px;
     margin-right: 1rem;
   }
   
@@ -30,10 +50,9 @@
   
   /* Float four columns side by side */
   .column {
-    
-   
     width: 25%;
     padding: 0 10px;
+    
   }
   
   /* Remove extra left and right margins, due to padding */
@@ -48,42 +67,170 @@
   .longtext {
     padding-left: 3rem;
     white-space: pre;
-    font-size: 15px;
-    color: black;
-   
+    font-size: 17px;
+    color: black;  
+    
+  }
+
+  .longtext, a {
+    text-decoration: none;
+    
   }
   
-  /* Responsive columns */
-  @media screen and (max-width: 600px) {
-    .column {
-      width: 50%;
-      padding: 0rem;
+ /* .card-sl {
+    border: 2px solid;
+    border-radius: 15px 15px 15px;
+  }
 
+  */
+  /* Responsive columns */
+
+  @media screen and (max-width: 1400px) {
+    .text{
+      font-size: 50px;
+      font-weight: 600;
+    }
+
+
+  }
+
+
+
+
+
+
+  @media screen and (max-width: 1024px) {
+    .text{
+      font-size: 45px;
+      font-weight: 600;
+    }
+   
+    .card-sl {
+      border: 2px solid;
+      border-radius: 15px 15px 15px;
+    }
+  
+  }
+
+  @media screen and (max-width: 900px) {
+    .container3 img {
+      height: 300px;
+    }
+  }
+
+
+  @media screen and (max-width: 820px) {
+   
     
-      margin-bottom: 20px;
+    .longtext {
+      margin-left: -2rem;
     }
 
     .card-sl {
-      width: 50%;
+      border: 2px solid;
+      border-radius: 15px 15px 15px;
+    }
+
+  }
+  
+  
+
+
+
+
+
+
+
+
+  @media screen and (max-width: 760px) {
+    .text{
+      font-size: 42px;
+      font-weight: 600;
     }
 
 
     .longtext {
       margin-left: -2.5rem;
+      
     }
-
-    #header {
-      background: url("service.jpg") center center / cover no-repeat ;
-     
-    }
-
   }
 
 
-  @media screen and (max-width: 760px) {
+  
+
+ 
+
+
+  @media screen and (max-width: 600px) {
+    .text{
+      font-size: 38px;
+      font-weight: 600;
+    }
+
+    .column {
+      width: 50%;
+      padding: 0rem;
+      margin-bottom: 20px;
+    }
+
+    .card-sl {
+      width: 90%;
+    }
+
+
     .longtext {
-      margin-left: -3rem;
-      
+      margin-left: -2.2rem;
+    }
+   
+
+  }
+  @media screen and (max-width: 599px) {
+    .column {
+      width: 45%;
+      padding: 0rem;
+      margin-bottom: 20px;
+    }
+    
+    
+    .card-sl {
+      width: 90%;
+    }
+  }
+
+
+
+  
+  @media screen and (max-width: 540px) {
+    .longtext {
+      margin-left: -2.5rem;
+    }
+   
+ 
+    .text{
+      font-size: 37px;
+      font-weight: 600;
+    }
+
+    
+  }
+
+
+
+  @media screen and (max-width: 480px) {
+     
+    .text{
+      font-size: 35px;
+      font-weight: 600;
+    }
+    
+
+    .longtext {
+      margin-left: -1rem;
+    }
+
+    .card-sl {
+      border: 2px solid;
+      border-radius: 15px 15px 15px;
     }
   }
 
@@ -91,13 +238,48 @@
 
 
   @media screen and (max-width: 400px) {
-    .longtext {
-      margin-left: -3.3rem;
-      
-      
+   /* #header {
+      background: url("service.jpg")  center center / cover no-repeat;
+      background-size: contain;
+      max-width: 100%;
+      height: 100%;
+    }
+    */
+    .text{
+      font-size: 32px;
+      font-weight: 600;
     }
     
+    .longtext {
+      margin-left: -2rem;
+    }
+
+      .card-sl {
+        border: 2px solid;
+        border-radius: 15px 15px 15px;
       }
+      
+    }
+    @media screen and (max-width: 375px){
+      .text{
+        font-size: 30px;
+        font-weight: 600;
+      }
+      .longtext {
+        margin-left: -2rem;
+      }
+    }
+   
+    
+
+
+
+
+    
+    
+    
+
+      
 
   
   /* Style the counter cards */
@@ -125,20 +307,22 @@
          
       }
   
-  
- 
+   
   
   
   .textservice {
-    font-size: x-large;
-    color: black;
-    margin-left: 4rem;
+    white-space: pre;
+    font-family: poppins;
+    font-weight: 400;
+    font-size: 40px;
+    color: #000000;
+    margin-left: 1.5rem;
     margin-top: 2rem;
   }
   
   #div1 {
- 
-  margin-left: 4rem;
+ margin-right: -2rem;
+  margin-left: 1.2rem;
   
 
   }
@@ -146,5 +330,4 @@
 
   /*Animation*/
 
-  
   
